fixed footer, search results done

--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -15,9 +15,11 @@
   <div class="container-fluid">
     <div class="detail-nav search-nav row border align-items-center">
       <div class="col" style="margin-left: 215px; padding-left: 0px;">
-        <nav class="navbar navbar-light border-0">
+        <nav class="navbar navbar-default border-0">
           <button class="navbar-toggler border-0" type="button" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
       </div>
       <div class="col"></div>
@@ -147,49 +149,49 @@
     </div>
   </div>
   <div class="footer m-5 p-2 containter-fluid">
-    <div class="row justify-content-around" style="margin-left: 110px;">
-      <div class="col-auto pr-5" style="width: 190px !important;">
+    <div class="row" style="margin-left: 122px;">
+      <div class="col-auto" style="width: 190px !important;">
         <div class="list-group" style="width: 190px !important;">
-          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">Cinch Sports </span>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">About Cinch</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Blog</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Store</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Developers</a>
+          <span style="font-size: 9pt; letter-spacing: 1.2pt;" class="list-group-item border-0 text-uppercase xlight-montserrat">Cinch Sports </span>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">About Cinch</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Blog</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Store</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Developers</a>
         </div>
       </div>
-      <div class="col-auto pl-4 pr-5">
+      <div class="col-auto" style="padding-left: 23px;">
         <div class="list-group">
-          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">Help </span>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Help Center</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Video School</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">FAQ</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Forums</a>
+          <span style="font-size: 9pt; letter-spacing: 1.2pt;" class="list-group-item border-0 text-uppercase xlight-montserrat">Help </span>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Help Center</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Video School</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">FAQ</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Forums</a>
         </div>
       </div>
-      <div class="col-auto pr-5">
+      <div class="col-auto" style="padding-left: 44px;">
         <div class="list-group">
-          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">More </span>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Partners</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Affiliate Program</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Donate</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Cinch Sportswear</a>
+          <span style="font-size: 9pt; letter-spacing: 1.2pt;" class="list-group-item border-0 text-uppercase xlight-montserrat">More </span>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Partners</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Affiliate Program</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Donate</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Cinch Sportswear</a>
         </div>
       </div>
-      <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start" style="margin-left: 220px;">
+      <div class="container col-auto mt-2 justify-content-start" style="margin-left: 230px; width: 150px;">
         <div class="row pb-3 text-uppercase light-montserrat">
           follow us
         </div>
-        <div class="d-flex footer-images justify-content-md-start row">
-          <div class="col-md-1 px-0 mx-0">
+        <div class="d-flex footer-images row">
+          <div class="col-auto" style="margin: 0px 0px; padding: 0px 25px 0px 0px;">
             <img src="../images/Twitter Icon.png" alt="Twitter">
           </div>
-          <div class="col-md-1 px-0 mx-0">
+          <div class="col-auto" style="margin: 0px 0px; padding: 0px 25px 0px 0px;">
             <img src="../images/Facebook Icon.png" alt="Facebook">
           </div>
-          <div class="col-md-1 px-0 mx-0">
+          <div class="col-auto" style="margin: 0px 0px; padding: 0px 24px 0px 0px;">
             <img src="../images/Google Icon.png" alt="Google Plus">
           </div>
-          <div class="col-md-1 px-0 mx-0">
+          <div class="col-auto" style="margin: 0px 0px; padding: 0px;">
             <img src="../images/Tumblr Icon.png" alt="Tumblr">
           </div>
         </div>
@@ -198,9 +200,9 @@
             <div class="col my-4">
               <label for="subscribe" class="pb-3 light-montserrat text-uppercase">Subscribe</label>
               <div class="input-group" style="width: 492px; height: 50px;">
-                <input type="email" class="form-control footer-input rounded-0" id="subscribe" placeholder="Enter Your Email">
-                <span class="input-group-btn" style="width: 48%;">
-                  <button type="submit" class="btn btn-cinch light-montserrat" style="width: 100%; border-radius: 2px; letter-spacing: 1.2px; font-size: 10pt;">SIGN UP</button>
+                <input type="email" class="form-control footer-input" id="subscribe" placeholder="Enter Your Email" style="border-radius: 2px;">
+                <span class="input-group-btn" style="width: 47%;">
+                  <button type="submit" class="btn btn-cinch light-montserrat" style="width: 100%; border-radius: 2px; letter-spacing: 1.2px; font-size: 9pt;">SIGN UP</button>
                 </span>
               </div>
             </div>
