--- a/public/pages/search-results.html
+++ b/public/pages/search-results.html
@@ -7,157 +7,156 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
- 
   <link href="../style/master.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="search-nav row border align-items-center">
-    <div class="col-auto" style="margin-left: 205px; margin-right: 410px;">
-      <nav class="navbar navbar-light">
-        <button class="navbar-toggler border-0" type="button" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <div class="col-auto" style="margin-left: 212px; margin-right: 460px;">
+        <div style="height: 15px; width: 20px; padding: 0px;">
+          <div class="icon-bar" style="height: 1px !important;"></div>
+          <div class="icon-bar" style="height: 1px !important;"></div>
+          <div class="icon-bar" style="height: 1px !important;"></div>
+        </div>
     </div>
-    <div class="col-auto search-logo" style="width: 515px;">
+    <div class="col-auto search-logo" style="width: 200px; margin-right: 210px; padding-left: 78px !important;">
       <img src="../images/cinch(black).png" alt="Cinch Logo">
     </div>
-    <div class="col" style="font-family:'Monserrat' 'sans-serif'; font-weight: 200;">
+    <div class="col" style="font-family:'Monserrat' 'sans-serif';">
       <form class="form-inline">
         <div class="col-auto px-0">
-          <button class="btn border nav-link px-3 rounded-0 search-membership-buttons light-montserrat text-uppercase">
+          <button class="btn border nav-link px-3 rounded-0 search-membership-buttons light-montserrat text-uppercase" style="font-size: 8pt;  font-weight: 100; padding: 0px 14px; color: rgb(177,177,177)">
               Join
             </button>
         </div>
         <div class="col-auto px-0">
-          <button class="btn nav-link border-0 rounded-0 search-membership-buttons light-montserrat text-uppercase">
+          <button class="btn nav-link border-0 rounded-0 search-membership-buttons light-montserrat text-uppercase" style="font-size: 8pt; font-weight: 100;  color: rgb(177,177,177); padding: 0 18px 0 12px;">
               Login
             </button>
         </div>
       </form>
-      </nav>
     </div>
   </div>
-  <div class="container-fluid" style="margin: 22px 240px 15px; width: 1602px; height: 1275px;">
+  <div class="container-fluid" style="margin: 22px 240px 15px 216px; width: 1602px; height: 1275px;">
     <div class="row" style="margin-bottom: 44px;">
       <form style="width: 1200px;">
         <div class="form-row align-items-center">
-          <div class="form-group col-auto ml-0" style="width: 185px !important; margin: 0 20px;">
-            <label for="inputSport" class="text-uppercase light-montserrat" style="letter-spacing: 1.2px; font-size: 10pt;">Sport</label>
+          <div class="form-group col-auto ml-0" style="width: 179px !important; margin: 0 16px;">
+            <label for="inputSport" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt;">Sport</label>
             <select id="inputSport" class="form-control detail-search-input light-montserrat" style="padding: 15px 10px 15px 20px; border-radius: 1px !important;" >
                 <option selected>Soccer</option>
                 <option>...</option>
               </select>
           </div>
-          <div class="form-group col-auto px-0" style="width: 185px !important; margin: 0 20px;">
-            <label for="inputType" class="text-uppercase light-montserrat" style="letter-spacing: 1.2px; font-size: 10pt; ">Type</label>
+          <div class="form-group col-auto px-0" style="width: 171px !important; margin: 0 17px;">
+            <label for="inputType" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt; ">Type</label>
             <select id="inputType" class="form-control detail-search-input light-montserrat" style="padding: 15px 10px 15px 20px; border-radius: 2px !important;" >
               <option selected>Camps</option>
               <option>...</option> 
             </select>
           </div>
-          <div class="form-group col-auto px-0" style="width: 185px !important; margin:0 20px;">
-            <label for="inputCity" class="text-uppercase light-montserrat" style="letter-spacing: 1.2px; font-size: 10pt; ">Location</label>
-            <input type="text" class="form-control detail-search-input light-montserrat" placeholder="95124"  style="padding: 15px 10px 15px 20px;" id="inputCity">
+          <div class="form-group col-auto px-0" style="width: 170px !important; margin:0 16px;">
+            <label for="inputCity" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt; ">Location</label>
+            <input type="text" class="form-control detail-search-input light-montserrat" placeholder="95124"  style="padding: 14px 10px 14px 20px;" id="inputCity">
           </div>
-          <div class="form-group col-auto px-0" style="width: 185px !important; margin:0 20px;">
-            <label for="inputZip" class="text-uppercase light-montserrat" style="letter-spacing: 1.2px; font-size: 10pt; ">Start Date</label>
+          <div class="form-group col-auto px-0" style="width: 170px !important; margin:0 14px 0 12px;">
+            <label for="inputZip" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt; ">Start Date</label>
             <input type="date" class="form-control detail-search-input light-montserrat text-uppercase"  style="padding-left: 10px; color: rgb(155,155,155); padding: 15px 10px 15px 20px; letter-spacing: 0px;" id="inputZip">
           </div>
-          <div class="col-3 pt-3" style="margin:14px 0px 20px 15px;">
-            <button class="light-montserrat btn btn-cinch text-uppercase" style="color: white; width: 260px; border-radius: 2px; margin-top: 16px; padding: 15px 0px;">Search</button>
+          <div class="col-3 pt-3" style="margin:12px 0px 20px 18px; padding-left: 0px;">
+            <button class="btn btn-cinch text-uppercase" style="color: white; width: 232px; border-radius: 2px; margin-top: 16px; padding: 15px 0px; letter-spacing: 1.4px; font-size: 9pt; font-weight: 100;">Search</button>
           </div>
         </div>
       </form>
     </div>
-    <div class="row align-items-center text-center border" style="width: 1300px !important; padding: 35px 10px 35px 40px;">
-      <div class="col-1" style="width: 156px !important; margin-top:5px;">
+    <div class="row align-items-center text-center border" style="width: 1300px !important; padding: 35px 10px 35px 34px;">
+      <div class="col-auto" style="width: 148px !important; margin-top:5px; margin-left: 2px;">
         <div class="row m-0">
-          <img src="../images/Arsenal_FC.svg.png">
+          <img style="height: 95px; width: 80px;"src="../images/Arsenal_FC.svg.png">
         </div>
         <div class="row py-2">
-          <span class="text-uppercase light-montserrat text-nowrap" style="font-size: 12pt; letter-spacing: 1.6px;">ARSENAL FC</span>
+          <span class="text-uppercase light-montserrat text-nowrap" style="font-size: 10pt; letter-spacing: 1.6px;">ARSENAL FC</span>
         </div>
       </div>
-      <div class="col-auto align-items-center" style="margin: 0px 50px 0px 65px;">
-        <div class="row justify-content-center text-uppercase" style="font-size: 18pt; letter-spacing: 2pt;">
+      <div class="col-auto align-items-center" style="margin: 0px 28px 0px 2px;  padding: 0px 18px 0px 44px">
+        <div class="row justify-content-center text-uppercase" style="font-size: 14pt; letter-spacing: 2pt;">
           <p class="m-0">Soccer Camp</p>
         </div>
-        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .7); font-size: 12pt; margin-top: 5px; font-weight: 300;">
-          <p class="m-0">July 20-24 9am-3pm </p>
+        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .6); font-size: 10pt; padding-bottom: 0px; height: 30px; margin-top: 10px; font-weight: 400;">
+          <p>July 20-24 9am-3pm </p>
         </div>
-        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .7); font-size: 12pt; margin-top: 5px; font-weight: 300;">
-          <p class="m-0">Ages 5-14 </p>
+        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .6); font-size: 10pt; padding-bottom: 0px; height: 30px; font-weight: 400;">
+          <p>Ages 5-14 </p>
         </div>
-        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .7); font-size: 12pt; margin-top: 5px; font-weight: 300;">
-          <p class="m-0">@ Mirasol Park </p>
+        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .6); font-size: 10pt; padding-bottom: 0px; height: 30px; font-weight: 400;">
+          <p>@ Mirasol Park </p>
         </div>
       </div>
-      <div class="col-auto" style="height: 120px; width: 400px !important; padding: 15px 20px;">
-        <div class="row justify-content-center xlight-montserrat" style="margin: 0px 20px; font-size: 14pt; color: rgba(0, 0, 0, .5);">
+      <div class="col-auto" style="height: 120px; width: 385px !important; padding: 15px 17px;">
+        <div class="row justify-content-center xlight-montserrat" style="margin: 2px 18px; font-size: 13pt; color: rgba(0, 0, 0, .5); letter-spacing: .4px;">
           <p class="m-0">Arsenal FC offers players a </p>
         </div>
-        <div class="row justify-content-center xlight-montserrat" style="margin: 0px; font-size: 14pt; color: rgba(0, 0, 0, .5);">
+        <div class="row justify-content-center xlight-montserrat" style="margin: 2px; font-size: 13pt; color: rgba(0, 0, 0, .5); letter-spacing: .4px;">
           <p class="m-0">unique look into how to train</p>
         </div>
-        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 14pt; color: rgba(0, 0, 0, .5);">
+        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 2px; font-size: 13pt; color: rgba(0, 0, 0, .5); letter-spacing: .4px;">
           <p class="m-0">the Arsenal Way.</p>
         </div>
       </div>
-      <div class="col-auto light-montserrat" style="font-size: 18pt; padding-right: 25px; padding-left: 25px; margin-left: 30px;">
+      <div class="col-auto xlight-montserrat" style="font-size: 14pt; padding-right: 25px; padding-left: 15px; margin-left: 10px; letter-spacing: 2.4px;">
         $599
       </div>
       <div class="col-auto px-0">
-        <button class="btn btn-cinch text-uppercase py-3 light-montserrat" style="width: 242px; border-radius: 3px; margin-left: 20px;">
+        <button class="btn btn-cinch text-uppercase py-3 xlight-montserrat" style="width: 231px; border-radius: 3px; margin-left: 14px; font-size: 9pt;">
           Select
         </button>
       </div>
     </div>
   </div>
   <div class="footer m-5 p-2 containter-fluid">
-    <div class="row justify-content-around" style="margin-left: 110px;">
-      <div class="col-auto pr-5" style="width: 190px !important;">
+    <div class="row" style="margin-left: 122px;">
+      <div class="col-auto" style="width: 190px !important;">
         <div class="list-group" style="width: 190px !important;">
-          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">Cinch Sports </span>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">About Cinch</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Blog</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Store</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Developers</a>
+          <span style="font-size: 9pt; letter-spacing: 1.2pt;" class="list-group-item border-0 text-uppercase xlight-montserrat">Cinch Sports </span>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">About Cinch</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Blog</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Store</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Developers</a>
         </div>
       </div>
-      <div class="col-auto pl-4 pr-5">
+      <div class="col-auto" style="padding-left: 23px;">
         <div class="list-group">
-          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">Help </span>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Help Center</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Video School</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">FAQ</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Forums</a>
+          <span style="font-size: 9pt; letter-spacing: 1.2pt;" class="list-group-item border-0 text-uppercase xlight-montserrat">Help </span>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Help Center</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Video School</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">FAQ</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Forums</a>
         </div>
       </div>
-      <div class="col-auto pr-5">
+      <div class="col-auto" style="padding-left: 44px;">
         <div class="list-group">
-          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">More </span>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Partners</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Affiliate Program</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Donate</a>
-          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Cinch Sportswear</a>
+          <span style="font-size: 9pt; letter-spacing: 1.2pt;" class="list-group-item border-0 text-uppercase xlight-montserrat">More </span>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Partners</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Affiliate Program</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Donate</a>
+          <a href="#" style="font-size: 11pt; letter-spacing: .5pt;" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Cinch Sportswear</a>
         </div>
       </div>
-      <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start" style="margin-left: 220px;">
+      <div class="container col-auto mt-2 justify-content-start" style="margin-left: 230px; width: 150px;">
         <div class="row pb-3 text-uppercase light-montserrat">
           follow us
         </div>
-        <div class="d-flex footer-images justify-content-md-start row">
-          <div class="col-md-1 px-0 mx-0">
+        <div class="d-flex footer-images row">
+          <div class="col-auto" style="margin: 0px 0px; padding: 0px 25px 0px 0px;">
             <img src="../images/Twitter Icon.png" alt="Twitter">
           </div>
-          <div class="col-md-1 px-0 mx-0">
+          <div class="col-auto" style="margin: 0px 0px; padding: 0px 25px 0px 0px;">
             <img src="../images/Facebook Icon.png" alt="Facebook">
           </div>
-          <div class="col-md-1 px-0 mx-0">
+          <div class="col-auto" style="margin: 0px 0px; padding: 0px 24px 0px 0px;">
             <img src="../images/Google Icon.png" alt="Google Plus">
           </div>
-          <div class="col-md-1 px-0 mx-0">
+          <div class="col-auto" style="margin: 0px 0px; padding: 0px;">
             <img src="../images/Tumblr Icon.png" alt="Tumblr">
           </div>
         </div>
@@ -166,9 +165,9 @@
             <div class="col my-4">
               <label for="subscribe" class="pb-3 light-montserrat text-uppercase">Subscribe</label>
               <div class="input-group" style="width: 492px; height: 50px;">
-                <input type="email" class="form-control footer-input rounded-0" id="subscribe" placeholder="Enter Your Email">
-                <span class="input-group-btn" style="width: 48%;">
-                  <button type="submit" class="btn btn-cinch light-montserrat" style="width: 100%; border-radius: 2px; letter-spacing: 1.2px; font-size: 10pt;">SIGN UP</button>
+                <input type="email" class="form-control footer-input" id="subscribe" placeholder="Enter Your Email" style="border-radius: 2px;">
+                <span class="input-group-btn" style="width: 47%;">
+                  <button type="submit" class="btn btn-cinch light-montserrat" style="width: 100%; border-radius: 2px; letter-spacing: 1.2px; font-size: 9pt;">SIGN UP</button>
                 </span>
               </div>
             </div>
